Not fully completed

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,7 @@ api-version: '1.21'
 authors: [ Iirontools ]
 description: Plugin na Nokauty z Kwadratowej Masakry
 website: https://github.io/iirontools
+commands:
+  podniesgracza:
+    description: Podnosi gracza
+    usage: /podniesgracza
