--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: SigmaNokaut
 version: '1.0'
 main: io.github.iirontools.sigmaNokaut.SigmaKnockOut
-api-version: '1.21'
+api-version: '1.20.6'
 authors: [ Iirontools ]
 description: Plugin na Nokauty z Kwadratowej Masakry
 website: https://github.io/iirontools
@@ -9,8 +9,12 @@ commands:
   podniesgracza:
     description: Podnosi gracza
     usage: /podniesgracza
+    aliases:
+      - liftplayer
+      - lift
   poddajsie:
     description: Poddaje sie
     usage: /poddajsie
     aliases:
       - giveup
+      - surrender
