--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,8 @@ api-version: '1.20.6'
 authors: [ Iirontools ]
 description: Plugin na Nokauty z Kwadratowej Masakry
 website: https://github.io/iirontools
+depend:
+  - packetevents
 commands:
   podniesgracza:
     description: Podnosi gracza
